# ESP32-Nimble-BLE-Example

./: CMakeLists.txt  README.md  sdkconfig.old
apps/misc/: CMakeLists.txt  misc.c  misc.h
apps/nimble_component/: CMakeLists.txt  nimble_component.c  nimble_component.h
core/: CMakeLists.txt  main.cpp  main.h
